# src/domain/models/get_table_by_params.model.go
@@ -1,0 +1,7 @@
+package models
+
+type GetTableByParamsModel struct {
+	UserID    uint64 `json:"user_id" validate:"required"`
+	TypeID    uint64 `json:"type_id" validate:"required"`
+	MonthYear string `json:"month_year" validate:"required,datetime=2006-01"`
+}
