# src/presentation/http/handler/Table/table.handler.go
@@ -16,17 +16,20 @@ import (
 type TableHandler interface {
 	Create(w http.ResponseWriter, r *http.Request)
 	GetById(w http.ResponseWriter, r *http.Request)
+	GetByParams(w http.ResponseWriter, r *http.Request)
 }
 
 type tableHandler struct {
-	createTableUsecase  usecases_table.CreateTableUsecase
-	getTableByIdUsecase usecases_table.GetTableByIdUsecase
+	createTableUsecase      usecases_table.CreateTableUsecase
+	getTableByIdUsecase     usecases_table.GetTableByIdUsecase
+	getTableByParamsUsecase usecases_table.GetTableByParamsUsecase
 }
 
-func NewTableHandler(createTableUsecase usecases_table.CreateTableUsecase, getTableByIdUsecase usecases_table.GetTableByIdUsecase) TableHandler {
+func NewTableHandler(createTableUsecase usecases_table.CreateTableUsecase, getTableByIdUsecase usecases_table.GetTableByIdUsecase, getTableByParamsUsecase usecases_table.GetTableByParamsUsecase) TableHandler {
 	return &tableHandler{
-		createTableUsecase:  createTableUsecase,
-		getTableByIdUsecase: getTableByIdUsecase,
+		createTableUsecase:      createTableUsecase,
+		getTableByIdUsecase:     getTableByIdUsecase,
+		getTableByParamsUsecase: getTableByParamsUsecase,
 	}
 }
 
@@ -59,7 +62,7 @@ func (h *tableHandler) GetById(w http.ResponseWriter, r *http.Request) {
 	tableIdStr := r.URL.Path[strings.LastIndex(r.URL.Path, "/")+1:]
 	tableId, err := strconv.ParseUint(tableIdStr, 10, 64)
 
-	var payload models.GetTableModel
+	var payload models.GetTableByIdModel
 	payload.ID = tableId
 
 	if err != nil || validator.New().Struct(payload) != nil {
@@ -68,6 +71,47 @@ func (h *tableHandler) GetById(w http.ResponseWriter, r *http.Request) {
 	}
 
 	table, err := h.getTableByIdUsecase.Execute(payload.ID)
+
+	if err != nil {
+		handler.HandleHttpError(w, http.StatusInternalServerError, err)
+		return
+	}
+
+	handler.HandleHttpSuccess(w, http.StatusOK, handler.HttpMessage[http.StatusOK], table)
+}
+
+func (h *tableHandler) GetByParams(w http.ResponseWriter, r *http.Request) {
+	query := r.URL.Query()
+
+	userIDStr := query.Get("user_id")
+	typeIDStr := query.Get("type_id")
+	monthYear := query.Get("month_year")
+
+	userID, err := strconv.ParseUint(userIDStr, 10, 64)
+	if err != nil {
+		handler.HandleHttpError(w, http.StatusBadRequest, errors.New("invalid user_id"))
+		return
+	}
+
+	typeID, err := strconv.ParseUint(typeIDStr, 10, 64)
+	if err != nil {
+		handler.HandleHttpError(w, http.StatusBadRequest, errors.New("invalid type_id"))
+		return
+	}
+
+	model := &models.GetTableByParamsModel{
+		UserID:    userID,
+		TypeID:    typeID,
+		MonthYear: monthYear,
+	}
+
+	if err := validator.New().Struct(model); err != nil {
+		handler.HandleHttpError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	model.MonthYear = model.MonthYear + "-01"
+	table, err := h.getTableByParamsUsecase.Execute(model)
 
 	if err != nil {
 		handler.HandleHttpError(w, http.StatusInternalServerError, err)
